<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="center">
	<ImageView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:src="@drawable/heartbloodpressure" />
	<Button android:id="@+id/new_measure_button"
		android:layout_width="240px" android:layout_height="wrap_content"
		android:text="@string/new_measure_button" />
	<Button android:id="@+id/measure_list" android:layout_width="240px"
		android:layout_height="wrap_content" android:text="@string/view_measure_button"/>
	<Button android:id="@+id/help_button" android:layout_width="240px"
		android:layout_height="wrap_content" android:text="@string/help_button" />
</LinearLayout>

