<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content">

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical">

		<TextView android:id="@+id/text0" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/help_title"
			android:textStyle="bold" />

		<Button android:id="@+id/button_start" android:text="Start"
			android:layout_width="100px" android:layout_height="wrap_content"
			android:layout_below="@+id/text0" android:layout_marginTop="-15dip"
			android:layout_alignRight="@+id/text0">
		</Button>

		<ImageView android:layout_width="wrap_content" android:id="@+id/test_image"
			android:src="@drawable/bp" android:layout_height="wrap_content"
			android:layout_below="@+id/button_start" android:layout_marginTop="10dip"
			android:layout_marginRight="7dip" android:layout_alignRight="@+id/button_start">
		</ImageView>

		<TextView android:id="@+id/text1" android:textColor="#ffffff"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_below="@+id/text0" android:layout_marginTop="13dip"
			android:text="@string/help_needed" />

		<TextView android:id="@+id/text2" android:textColor="#ffffff"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_below="@+id/text1" android:layout_marginTop="13dip"
			android:text="@string/help_before" />

		<TextView android:id="@+id/text3" android:textColor="#ffffff"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_below="@+id/text2" android:layout_marginTop="13dip"
			android:text="@string/help_reading" />

		<TextView android:id="@+id/text4" android:textColor="#ffffff"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_below="@+id/text3" android:layout_marginTop="13dip"
			android:text="@string/help_record"/>

	</RelativeLayout>

</ScrollView>

